Bug 456718 - Window activation policy description label not initialized on opening the KCM
Summary: Window activation policy description label not initialized on opening the KCM
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwinoptions (other bugs)
Version First Reported In: 5.26.2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 475569 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-07-14 13:40 UTC by Nagy Tibor
Modified: 2023-11-01 22:53 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Screenshot (161.07 KB, image/png)
2022-07-14 13:40 UTC, Nagy Tibor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nagy Tibor 2022-07-14 13:40:10 UTC
Created attachment 150620 [details]
Screenshot

SUMMARY
The description label of the window activation policy combobox at "System Settings" -> "Window Management" -> "Window Behavior" -> "Focus" is not initialized when opening the KCM. It only shows a placeholder text until you change the combobox above.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.25
KDE Plasma Version: 5.25.3
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Graphics Platform: X11
Comment 1 Nicolas Fella 2023-10-18 23:05:44 UTC
*** Bug 475569 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2023-10-28 19:56:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4584
Comment 3 Nate Graham 2023-11-01 22:53:25 UTC
Git commit 40a4f4c90bf4c0a5c54640db652afda1286bce6b by Nate Graham.
Committed on 01/11/2023 at 23:41.
Pushed by ngraham into branch 'master'.

kcms/options: set focus policy strings on load, not just on change

Right now the string is only set when the option is changed to anything
else. That's fine, but we need to set it on load too, or else the user
will see a placeholder string instead of the real text if they don't
change anything.
FIXED-IN: 6.0

M  +28   -6    src/kcms/options/windows.cpp
M  +2    -0    src/kcms/options/windows.h

https://invent.kde.org/plasma/kwin/-/commit/40a4f4c90bf4c0a5c54640db652afda1286bce6b