kcms/options: set focus policy strings on load, not just on change

Right now the string is only set when the option is changed to anything
else. That's fine, but we need to set it on load too, or else the user
will see a placeholder string instead of the real text if they don't
change anything.

BUG: 456718
FIXED-IN: 6.0